[package]
name = "cli"
version = "0.1.0"
author = "qin"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.5", features = ["derive"]}
csv = "1.2.0"
anyhow = "1.0.83"
# serde = "1.0.203"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.10"
toml = "0.8.14"
serde_yaml = "0.9.34"
